plugins {
    id 'java'
    id 'application'
}

application {
    mainClass = 'ledcontrol.LEDAnimator'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fazecast:jSerialComm:2.11.2'
}
